# research_upisas_ports

./: bsn_upisas.txt  crowd_nav_upisas.txt  dingnet_upisas.txt  ews_upisas.txt  suave_upisas.txt
BSN/bsn-main/: README.md  requirements.txt  run.sh
BSN/bsn_upisas-main/: Dockerfile  README.md  requirements.txt  run.py
CrowdNav/foas_crowd_nav-main/: Dockerfile  README.md  run.sh
CrowdNav/foas_upisas-baseline/: .gitignore  cars_500_baseline_results.json  cars_700_baseline_results.json  cars_800_baseline_results.json  run.py
CrowdNav/foas_upisas-testing/: base_run.py  q_table_500.csv  q_table_500.json  q_table_500_baseline.json  q_table_700.csv  q_table_800.csv  q_table_800_testing.json  requirements.txt  run.py
CrowdNav/foas_upisas-training/: README.md  cars_500_testing_results.json  cars_700_testing_results.json  cars_800_testing_results.json  q_table_500_final.csv  q_table_700_final.csv  q_table_800_final.csv  run.py
DingNet/FAS-VU-DingNet-main/: Dockerfile  README.md
DingNet/FAS-VU-UPISAS-main/: README.md  requirements.txt  run.py
EWS/GreenLightDistrict-EWS-main/: README.md
EWS/GreenLightDistrict-UPISAS-main/: README.md  openapi.yaml  requirements.txt  run.py
SUAVE/UPISAS-assignment-3/: DOCUMENTATION.md  Dockerfile  HOWTO.md  README.md  docker-compose.yml  requirements.txt  (+1 more)
SUAVE/suave-assignment-3/suave_externalcontrol/: package.xml  setup.cfg  setup.py
SUAVE/suave-assignment-3/suave_externalcontrol/launch/: suave_externalcontrol.launch.py
SUAVE/suave-assignment-3/suave_externalcontrol/suave_externalcontrol/: external_control.py  http_server.py
(+164 files in other folders)
