<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>suave_externalcontrol</name>
  <version>0.0.1</version>
  <description>An HTTP server with a node for remote monitoring and adaptation</description>
  <maintainer email="nonexistent-fas-team-mail@vu.nl">FAS Team</maintainer>
  <license>TODO: License declaration</license>

  <depend>python3-flask</depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>suave_msgs</exec_depend>
  <exec_depend>system_modes_msgs</exec_depend>
  <exec_depend>system_modes</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
